intro to vector search

--- a/llm-own-laptop/notebooks/LLMOwnLaptop_Backup.ipynb
+++ b/llm-own-laptop/notebooks/LLMOwnLaptop_Backup.ipynb
@@ -11,26 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6713e20-f4d8-4a35-8792-8cf1524017ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "bcd231ba-5921-47d0-8e5f-df6452a5d5f4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-28T11:10:17.719390Z",
-     "iopub.status.busy": "2023-07-28T11:10:17.718992Z",
-     "iopub.status.idle": "2023-07-28T11:10:17.822004Z",
-     "shell.execute_reply": "2023-07-28T11:10:17.821718Z",
-     "shell.execute_reply.started": "2023-07-28T11:10:17.719370Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'huggingface_hub'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mhuggingface_hub\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hf_hub_b_download\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'huggingface_hub'"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import os\n",
     "from huggingface_hub import hf_hub_b_download"
@@ -40,15 +36,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "e3f9c81f-b382-4257-903e-824738bde19f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-28T11:10:19.153301Z",
-     "iopub.status.busy": "2023-07-28T11:10:19.152668Z",
-     "iopub.status.idle": "2023-07-28T11:10:19.161967Z",
-     "shell.execute_reply": "2023-07-28T11:10:19.161284Z",
-     "shell.execute_reply.started": "2023-07-28T11:10:19.153278Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HUGGING_FACE_API_KEY = os.environ.get(\"HUGGING_FACE_API_KEY\")"
