few shot prompting

--- a/gpt-instruct/notebooks/GPT-Instruct-Tutorial.ipynb
+++ b/gpt-instruct/notebooks/GPT-Instruct-Tutorial.ipynb
@@ -708,13 +708,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "49dfbfeb-a78b-4d13-9228-067e6a9d237a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-29T16:41:38.035062Z",
+     "iopub.status.busy": "2023-09-29T16:41:38.033696Z",
+     "iopub.status.idle": "2023-09-29T16:41:40.169956Z",
+     "shell.execute_reply": "2023-09-29T16:41:40.169295Z",
+     "shell.execute_reply.started": "2023-09-29T16:41:38.034995Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. The Laver Cup is named after Australian tennis legend Rod Laver, who is widely regarded as one of the greatest players in the sport's history. \n",
+      "2. The tournament is intended to be the equivalent of the Ryder Cup in golf, with the best players from Europe competing against the best players from the rest of the world. \n",
+      "3. Matches during the Laver Cup follow a unique format, with a \"match tiebreak\" being played if the match is tied at one set all. \n",
+      "4. The winning team receives a prize of $250,000, in addition to guaranteed participation fees based on players' ATP rankings. \n",
+      "5. The idea for the Laver Cup was inspired by Roger Federer, and was created in partnership with his management company, a Brazilian businessman, and Tennis Australia.\n",
+      "CPU times: user 17.3 ms, sys: 17.7 ms, total: 35 ms\n",
+      "Wall time: 2.11 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "print(turbo_in"
+    "print(turbo_instruct.predict(question))"
    ]
   }
  ],
