fts vs vector search

--- a/fts-vs-vector-search/fts_vector.ipynb
+++ b/fts-vs-vector-search/fts_vector.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Full-Text Search vs Vector Search in DuckDB\n",
     "\n",
-    "This is a companion notebook for a video showing how to do FTS vs Vector Search in DuckDB."
+    "This is a companion notebook for [a video showing how to do FTS vs Vector Search in DuckDB](https://www.youtube.com/watch?v=U6k7HnQiWzc)."
    ]
   },
   {
