fts vs vector search

--- a/fts-vs-vector-search/fts_vector.ipynb
+++ b/fts-vs-vector-search/fts_vector.ipynb
@@ -64,6 +64,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2aa0867-6c15-4b0f-aeb5-1058c9d27cd3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-21T21:07:45.743139Z",
+     "iopub.status.busy": "2024-07-21T21:07:45.742744Z",
+     "iopub.status.idle": "2024-07-21T21:07:45.773638Z",
+     "shell.execute_reply": "2024-07-21T21:07:45.756392Z",
+     "shell.execute_reply.started": "2024-07-21T21:07:45.743117Z"
+    }
+   },
+   "source": [
+    "# View transcript\n",
+    "\n",
+    "We're gonna use a transcript from the This Day in AI podcast."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "549f9239",
@@ -117,6 +135,14 @@
    "source": [
     "with c.pager(styles=True):\n",
     "  c.print(texts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4676ba20-ec82-44dd-8490-b18a030cc176",
+   "metadata": {},
+   "source": [
+    "# Splitting text into chunks"
    ]
   },
   {
@@ -229,6 +255,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28bda5e2-80b0-46e8-8242-d857e12c6416",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-21T21:08:10.625674Z",
+     "iopub.status.busy": "2024-07-21T21:08:10.624842Z",
+     "iopub.status.idle": "2024-07-21T21:08:10.634384Z",
+     "shell.execute_reply": "2024-07-21T21:08:10.633090Z",
+     "shell.execute_reply.started": "2024-07-21T21:08:10.625649Z"
+    }
+   },
+   "source": [
+    "# Generate embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "1009d54b",
@@ -315,6 +357,14 @@
     "  (document, embeddings['embedding'])  \n",
     "  for document, embeddings in zip(documents, embeddings['data'])\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ee4f0b9-6fd7-4c6c-8efb-1f036d1c2063",
+   "metadata": {},
+   "source": [
+    "# Ingest text and embeddings into DuckDB"
    ]
   },
   {
@@ -442,6 +492,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5261f173-e42f-4a6f-b1d4-dc9302a09692",
+   "metadata": {},
+   "source": [
+    "# Functions for FTS and Vector Search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "325d9d60",
@@ -495,6 +553,22 @@
     "    ORDER BY score DESC\n",
     "    LIMIT $limit\n",
     "    \"\"\", params={\"searchVector\": search_vector, \"limit\": limit})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1769db7e-4124-456f-84e3-ef450fbb6fd1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-21T21:09:01.342988Z",
+     "iopub.status.busy": "2024-07-21T21:09:01.341675Z",
+     "iopub.status.idle": "2024-07-21T21:09:01.348870Z",
+     "shell.execute_reply": "2024-07-21T21:09:01.348242Z",
+     "shell.execute_reply.started": "2024-07-21T21:09:01.342913Z"
+    }
+   },
+   "source": [
+    "# Querying"
    ]
   },
   {
