--- a/evaluate-rag/eval.ipynb
+++ b/evaluate-rag/eval.ipynb
@@ -11,6 +11,85 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "732d3c4a-ff93-4140-88e9-347bc8cf6af0",
+   "metadata": {
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2024-08-04T09:34:07.914423Z",
+     "iopub.status.busy": "2024-08-04T09:34:07.913986Z",
+     "iopub.status.idle": "2024-08-04T09:34:08.921591Z",
+     "shell.execute_reply": "2024-08-04T09:34:08.921207Z",
+     "shell.execute_reply.started": "2024-08-04T09:34:07.914408Z"
+    },
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ranx in ./.venv/lib/python3.12/site-packages (0.3.20)\n",
+      "Requirement already satisfied: duckdb in ./.venv/lib/python3.12/site-packages (1.0.0)\n",
+      "Requirement already satisfied: rich in ./.venv/lib/python3.12/site-packages (13.7.1)\n",
+      "Requirement already satisfied: numpy in ./.venv/lib/python3.12/site-packages (from ranx) (2.0.1)\n",
+      "Requirement already satisfied: numba>=0.54.1 in ./.venv/lib/python3.12/site-packages (from ranx) (0.60.0)\n",
+      "Requirement already satisfied: pandas in ./.venv/lib/python3.12/site-packages (from ranx) (2.2.2)\n",
+      "Requirement already satisfied: tabulate in ./.venv/lib/python3.12/site-packages (from ranx) (0.9.0)\n",
+      "Requirement already satisfied: tqdm in ./.venv/lib/python3.12/site-packages (from ranx) (4.66.4)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in ./.venv/lib/python3.12/site-packages (from ranx) (1.14.0)\n",
+      "Requirement already satisfied: ir-datasets in ./.venv/lib/python3.12/site-packages (from ranx) (0.5.8)\n",
+      "Requirement already satisfied: orjson in ./.venv/lib/python3.12/site-packages (from ranx) (3.10.6)\n",
+      "Requirement already satisfied: lz4 in ./.venv/lib/python3.12/site-packages (from ranx) (4.3.3)\n",
+      "Requirement already satisfied: cbor2 in ./.venv/lib/python3.12/site-packages (from ranx) (5.6.4)\n",
+      "Requirement already satisfied: seaborn in ./.venv/lib/python3.12/site-packages (from ranx) (0.13.2)\n",
+      "Requirement already satisfied: fastparquet in ./.venv/lib/python3.12/site-packages (from ranx) (2024.5.0)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in ./.venv/lib/python3.12/site-packages (from rich) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in ./.venv/lib/python3.12/site-packages (from rich) (2.18.0)\n",
+      "Requirement already satisfied: mdurl~=0.1 in ./.venv/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich) (0.1.2)\n",
+      "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in ./.venv/lib/python3.12/site-packages (from numba>=0.54.1->ranx) (0.43.0)\n",
+      "Requirement already satisfied: cramjam>=2.3 in ./.venv/lib/python3.12/site-packages (from fastparquet->ranx) (2.8.3)\n",
+      "Requirement already satisfied: fsspec in ./.venv/lib/python3.12/site-packages (from fastparquet->ranx) (2024.6.1)\n",
+      "Requirement already satisfied: packaging in ./.venv/lib/python3.12/site-packages (from fastparquet->ranx) (24.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in ./.venv/lib/python3.12/site-packages (from pandas->ranx) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib/python3.12/site-packages (from pandas->ranx) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.12/site-packages (from pandas->ranx) (2024.1)\n",
+      "Requirement already satisfied: beautifulsoup4>=4.4.1 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (4.12.3)\n",
+      "Requirement already satisfied: inscriptis>=2.2.0 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (2.5.0)\n",
+      "Requirement already satisfied: lxml>=4.5.2 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (5.2.2)\n",
+      "Requirement already satisfied: pyyaml>=5.3.1 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (6.0.1)\n",
+      "Requirement already satisfied: requests>=2.22.0 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (2.32.3)\n",
+      "Requirement already satisfied: trec-car-tools>=2.5.4 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (2.6)\n",
+      "Requirement already satisfied: warc3-wet>=0.2.3 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (0.2.5)\n",
+      "Requirement already satisfied: warc3-wet-clueweb09>=0.2.5 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (0.2.5)\n",
+      "Requirement already satisfied: zlib-state>=0.1.3 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (0.1.6)\n",
+      "Requirement already satisfied: ijson>=3.1.3 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (3.3.0)\n",
+      "Requirement already satisfied: unlzw3>=0.2.1 in ./.venv/lib/python3.12/site-packages (from ir-datasets->ranx) (0.2.2)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in ./.venv/lib/python3.12/site-packages (from seaborn->ranx) (3.9.1)\n",
+      "Requirement already satisfied: soupsieve>1.2 in ./.venv/lib/python3.12/site-packages (from beautifulsoup4>=4.4.1->ir-datasets->ranx) (2.5)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->ranx) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->ranx) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->ranx) (4.53.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->ranx) (1.4.5)\n",
+      "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->ranx) (10.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->ranx) (3.1.2)\n",
+      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->ranx) (1.16.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in ./.venv/lib/python3.12/site-packages (from requests>=2.22.0->ir-datasets->ranx) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.12/site-packages (from requests>=2.22.0->ir-datasets->ranx) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.12/site-packages (from requests>=2.22.0->ir-datasets->ranx) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.12/site-packages (from requests>=2.22.0->ir-datasets->ranx) (2024.7.4)\n",
+      "Requirement already satisfied: cbor>=1.0.0 in ./.venv/lib/python3.12/site-packages (from trec-car-tools>=2.5.4->ir-datasets->ranx) (1.0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ranx duckdb rich"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "90855bc0",
    "metadata": {
     "execution": {
