--- a/rerankers-playground/rerankers.ipynb
+++ b/rerankers-playground/rerankers.ipynb
@@ -247,7 +247,9 @@
     }
    },
    "source": [
-    "## Reranking an Olympics dataset"
+    "## Reranking an Olympics dataset\n",
+    "\n",
+    "Let's see how well it works on a dataset about the Olympics opening ceremony."
    ]
   },
   {
