--- a/phidata-memory/code.ipynb
+++ b/phidata-memory/code.ipynb
@@ -128,11 +128,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "id": "7dcac33e",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Adding chat history memory"
    ]
@@ -251,11 +249,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "id": "516d8819",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Adding user memories"
    ]
@@ -425,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "7b1c82f0",
    "metadata": {},
    "outputs": [
@@ -442,7 +438,8 @@
       "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /Users/markhneedham/.cache/uv/archive-v0/Mwy-KV5vaq3YhYNWhZQ-3/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (2024.10.1)\n",
       "Requirement already satisfied: referencing>=0.28.4 in /Users/markhneedham/.cache/uv/archive-v0/Mwy-KV5vaq3YhYNWhZQ-3/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.35.1)\n",
       "Requirement already satisfied: rpds-py>=0.7.1 in /Users/markhneedham/.cache/uv/archive-v0/Mwy-KV5vaq3YhYNWhZQ-3/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.22.3)\n",
-      "Requirement already satisfied: platformdirs>=2.5 in /Users/markhneedham/.cache/uv/archive-v0/Mwy-KV5vaq3YhYNWhZQ-3/lib/python3.10/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n"
+      "Requirement already satisfied: platformdirs>=2.5 in /Users/markhneedham/.cache/uv/archive-v0/Mwy-KV5vaq3YhYNWhZQ-3/lib/python3.10/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
